# tarsier

./: MANIFEST.in  pyproject.toml
tarsier/dataset/: mm_dataset.py
tarsier/evaluation/: evaluate.py
tarsier/evaluation/metrics/: evaluate_caption_cider.py
tarsier/models/: modeling_tarsier.py
tarsier/tasks/: demo_cli.py  demo_gradio.py  inference_benchmark.py  inference_quick_start.py  utils.py
tarsier/tools/: conversation.py
