[tool.poetry]
name = "tarsier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.44.2"
torch = "~2.4.0"
pillow = "^10.4.0"
pandas = "^2.2.2"
numpy = "^2.1.1"
decord = "^0.6.0"
accelerate = "^0.34.2"
flash-attn = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
